[gd_scene load_steps=6 format=3 uid="uid://bl0ijcj04id0r"]

[ext_resource type="Script" path="res://scenes/main_menu.gd" id="1_6lrgg"]
[ext_resource type="Texture2D" uid="uid://dh4rgpm6q6pv3" path="res://assets/UI/warlocks.png" id="1_if2yf"]
[ext_resource type="Texture2D" uid="uid://bsjdaqsib16j2" path="res://assets/UI/Button_52x14.png" id="2_xhyxg"]

[sub_resource type="SystemFont" id="SystemFont_x2ioh"]
font_names = PackedStringArray("Nimbus Roman")

[sub_resource type="SystemFont" id="SystemFont_llpib"]
font_names = PackedStringArray("Nimbus Roman")

[node name="Main_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6lrgg")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_if2yf")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="Separator" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 8
theme_override_constants/outline_size = 24
theme_override_fonts/font = SubResource("SystemFont_x2ioh")
theme_override_font_sizes/font_size = 64
text = "WARLOCKS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 64
alignment = 1

[node name="Separator2" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Separator3" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Separator4" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Start_Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = SubResource("SystemFont_llpib")
theme_override_font_sizes/font_size = 24
text = "Start Game"
icon = ExtResource("2_xhyxg")
icon_alignment = 1
expand_icon = true

[node name="Options_Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = SubResource("SystemFont_llpib")
theme_override_font_sizes/font_size = 24
text = "Options"
icon = ExtResource("2_xhyxg")
icon_alignment = 1
expand_icon = true

[node name="Exit_Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = SubResource("SystemFont_llpib")
theme_override_font_sizes/font_size = 24
text = "Exit Game"
icon = ExtResource("2_xhyxg")
icon_alignment = 1
expand_icon = true
